# RustUpdater

./: .gitignore  .gitmodules  Cargo.toml  README.md
launcher/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
launcher/src/: App.vue
launcher/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
launcher/src-tauri/src/: lib.rs  main.rs
patcher_cli/: Cargo.toml  build.rs
patcher_cli/src/: args.rs  main.rs  models.rs  utils.rs
updater/: Cargo.toml
updater/src/: lib.rs  models.rs  updater.rs
updater/src/patchers/: krdiff.rs  mod.rs
updater/src/utils/: compression_utils.rs  patch_core.rs  patch_krdir.rs  structs.rs
updater_cli/: .gitmodules  Cargo.toml  build.rs  hpatch_wrapper.c
updater_cli/src/: main.rs  models.rs  updater.rs
updater_cli/src/patchers/: hdiff.rs
updater_cli/src/utils/: header.rs  mod.rs  parser.rs  patch_dir.rs  patch_single.rs
