[package]
name = "updater"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[dependencies]
tokio = { version = "1", features = ["rt"] }
reqwest = { version = "0.13", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
blake3 = "1.5"
anyhow = "1.0"
zstd = "0.13"
fs4 = "0.8"